New approach for Java 9