@@ -124,7 +124,54 @@
 
 	<profiles>
 		<profile>
+			<id>java-9</id>
+			<activation>
+				<jdk>9</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.7.0</version>
+						<configuration>
+							<compilerArgs>
+								<arg>--add-modules=java.xml.bind</arg>
+							</compilerArgs>
+							<!-- without forking compilation happens in the same process, so no 
+								arguments are applied -->
+							<fork>true</fork>
+							<executable>javac9</executable>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<argLine>
+								--add-modules java.xml.bind
+								--illegal-access=deny
+							</argLine>
+						</configuration>
+					</plugin>
+					<plugin>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<configuration>
+							<argLine>
+								--add-modules java.xml.bind
+								--illegal-access=deny
+							</argLine>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
 			<id>coverage</id>
+			<activation>
+				<jdk>8</jdk>
+				<property>
+					<name>coverage</name>
+				</property>
+			</activation>
 			<build>
 				<plugins>
 					<plugin>
